--- a/public/index.html
+++ b/public/index.html
@@ -29,17 +29,19 @@
                     </ul>    
                 </div>          
                 <div class="nav_user">
-                  <button id="login_btn">Login</button>
-                  <button id="signup_btn">Sign up</button>
+                  <button id="login_btn">Login/Signup</button>
+                 
                 </div>
+                
             </div>
         </nav>
+
     </section>
 
 
     <section class="hero_section">
         <div>
-            <h1>Welcome to Stylestitch. where creativity knows no bounds! Dive into a world of endless possibilities as we celebrate the art of customization.</h1>
+            <h1>Welcome to Stylestitch. <br>Where creativity knows no bounds! Dive into a world of endless possibilities as we celebrate the art of customization.</h1>
             <p>From bespoke clothing to personalized prints, we're your ultimate destination for turning imagination into reality. Join us on this journey where every creation tells a unique story.</p>
             <h3>Let's craft something extraordinary together!</h3>
             <button>Get Customization</button>
